# quome-cli

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: auto-tag.yml  ci.yml  release.yml
docs/: authentication.md  configuration.md  getting-started.md  troubleshooting.md
docs/plans/: 2026-01-27-quome-cli-design.md  2026-01-27-quome-cli-implementation.md  2026-01-27-terminal-ui-design.md
docs/reference/: README.md  apps.md  databases.md  deployments.md  events.md  keys.md  link.md  logs.md  members.md  orgs.md  secrets.md  session.md  upgrade.md
docs/tutorials/: deploy-from-github.md  deploy-your-first-app.md  manage-secrets-like-a-pro.md  scripting-and-ci.md
scripts/: release.sh  setup.sh
scripts/hooks/: pre-commit
src/: client.rs  config.rs  errors.rs  main.rs  settings.rs  ui.rs
src/api/: apps.rs  audit.rs  auth.rs  databases.rs  events.rs  mod.rs  models.rs  orgs.rs  secrets.rs  users.rs
src/commands/: agent.rs  apps.rs  databases.rs  deployments.rs  events.rs  keys.rs  link.rs  login.rs  logout.rs  logs.rs  members.rs  mod.rs  orgs.rs  secrets.rs  unlink.rs  upgrade.rs  whoami.rs
