[package]
name = "quome-cli"
version = "0.1.10"
edition = "2021"
description = "CLI for the Quome platform"
license = "MIT"

[[bin]]
name = "quome"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Interactive prompts
inquire = "0.7"

# Terminal output
colored = "2.0"
indicatif = "0.17"
tabled = { version = "0.17", features = ["ansi"] }

# Utilities
dirs = "5.0"
open = "5.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde"] }

[profile.release]
lto = "fat"
opt-level = "z"
panic = "abort"
